--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -6,6 +6,11 @@
   align-items: center;
   position: sticky;
   top: 0;
+  z-index: 999;
+}
+
+.topbarLeft {
+  flex: 3;
 }
 
 .logo {
@@ -16,32 +21,31 @@
   cursor: pointer;
 }
 
-.topbarLeft {
-  flex: 3;
-}
-
 .topbarCenter {
   flex: 5;
 }
 
 .searchbar {
-  widows: 100%;
-  height: 32px;
+  width: 100%;
+  height: 30px;
   background-color: white;
   border-radius: 30px;
+  display: flex;
   align-items: center;
 }
 
 .searchIcon {
   font-size: 20px !important;
-  margin: 5px 0px 0px 10px;
+  margin-left: 10px;
 }
 
 .searchInput {
   border: none;
   width: 70%;
+}
+
+.searchInput:focus {
   outline: none;
-  margin-left: 7px;
 }
 
 .topbarRight {
@@ -51,19 +55,23 @@
   justify-content: space-around;
   color: white;
 }
+
 .topbarLink {
   margin-right: 10px;
   font-size: 14px;
   cursor: pointer;
 }
+
 .topbarIcons {
   display: flex;
 }
+
 .topbarIconItem {
   margin-right: 15px;
   cursor: pointer;
   position: relative;
 }
+
 .topbarIconBadge {
   width: 15px;
   height: 15px;
@@ -72,16 +80,17 @@
   color: white;
   position: absolute;
   top: -5px;
-  right: -6px;
+  right: -5px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 12px;
 }
+
 .topbarImg {
-  border-radius: 50%;
   width: 32px;
   height: 32px;
+  border-radius: 50%;
   object-fit: cover;
   cursor: pointer;
 }
